<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/SplashNoBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/indicator_sign"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"/>

    <LinearLayout
        android:id="@+id/layout_control"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingBottom="51dp">

        <View
            android:id="@+id/image_pil"
            android:layout_width="66dp"
            android:layout_height="5dp"
            android:layout_marginTop="18dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_curved_rect"
            android:alpha="0.1"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/welcome"
            android:textSize="28sp"
            android:textColor="?attr/colorOnBackground"
            app:fontFamily="@font/sourcesanspro_semibold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_sign_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="Error"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/selector_password_toggle"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:paddingHorizontal="18dp">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_remember"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:text="@string/remember_me" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/forgot_password" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/NoCaseButton"
            android:id="@+id/button_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:textColor="?attr/colorOnBackground"
            app:backgroundTint="?attr/colorSecondary"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_sign_up_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:text="@string/question_sign_up"/>
    </LinearLayout>
</FrameLayout>